--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
+    "dev2": "next dev --hostname 192.168.1.11 --port 3000",
     "start": "next start"
   },
   "dependencies": {
