--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "dev2": "next dev --hostname 192.168.1.100 --port 3000",
+    "dev2": "next dev --hostname 192.168.1.102 --port 3000",
     "start": "next start --port 3590"
   },
   "dependencies": {
@@ -12,6 +12,7 @@
     "fireworks-js": "^2.10.7",
     "next": "latest",
     "react": "18.2.0",
+    "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "18.2.0"
   },
   "engines": {
